# hydra

./: .dockerignore  .env.example  .env.local.example  .env.test.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture_decision.md  bug_report.md  documentation_task.md  engineering_task.md  security_review.md
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 20260708_0001_create_core_tables.py
docs/: 00_READ_FIRST.md  01_VISION.md  02_CONSTITUTION.md  03_PRODUCT_REQUIREMENTS.md  04_SYSTEM_ARCHITECTURE.md  05_DATA_MODEL.md  README_NEXT.md
docs/adr/: ADR-0001-hexagonal-architecture.md  ADR-0002-market-data-domain-model.md  ADR-0004-strategy-research-interface.md  ADR-0005-deterministic-fixture-strategy-provider.md  ADR-0006-research-reporting-foundation.md  ADR-0007-end-to-end-offline-research-scenario.md  ADR-0008-milestone-b-final-hardening-and-review.md  ADR-0009-in-memory-research-run-catalog.md  ADR-0010-research-run-ranking-and-selection.md
docs/configuration/: Configuration Validation.md  Environment Strategy.md  Environment Variables.md  Runtime Configuration.md
docs/engineering/: CI Pipeline.md  Command Parity.md  Developer Setup.md  Developer Workstation.md  Engineering Standards.md  Local Runtime Verification.md  Repository Workflow.md  Windows Setup.md
tests/: support.py  test_alembic_validation.py  test_architecture_layers.py  test_backtesting_domain.py  test_configuration.py  test_database_session.py  test_deterministic_fixture_strategy_provider.py  test_developer_workstation.py  test_health.py  test_local_verify.py  test_logging.py  test_market_data_domain.py  test_observability.py  test_offline_backtesting_service.py  test_offline_market_data_ingestion.py  test_offline_research_reporting_service.py  test_offline_research_scenario_service.py  test_offline_strategy_research_service.py  test_operations_readiness.py  test_release_readiness.py  test_research_reporting_domain.py  test_research_run_catalog_service.py  test_research_run_ranking_service.py  test_security_baseline.py  test_strategy_research_dto.py
tools/: __init__.py  check_developer_workstation.py  check_operations_readiness.py  check_release_readiness.py  check_repository_security.py  local_verify.py  validate_alembic.py
(+174 files in other folders)
