[project]
name = "hydra"
version = "0.1.0"
description = "Single-user quantitative crypto research platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16.2,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "redis>=6.2.0,<7.0.0",
  "sqlalchemy>=2.0.41,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0,<26.0.0",
  "httpx>=0.28.1,<1.0.0",
  "mypy>=2.2.0,<3.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "pytest>=8.4.1,<9.0.0",
  "pytest-cov>=6.2.1,<7.0.0",
  "ruff>=0.12.2,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hydra"]

[tool.pytest.ini_options]
addopts = "-q --cov=hydra --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "tools"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["hydra"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "tools"]
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true

[tool.coverage.run]
source = ["hydra"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv]
package = true
